chore: update about text
Added current librarians to the about page.

--- a/apps/website/src/app/(info)/about/page.mdx
+++ b/apps/website/src/app/(info)/about/page.mdx
@@ -17,6 +17,8 @@ David Aha, Patrick Murphy, Christopher Merz, Eamonn Keogh, Cathy Blake,
 Seth Hettich, David Newman, Arthur Asuncion, Moshe Lichman, Dheeru Dua, Casey Graff,
 Kolby Nottingham, Rachel Longjohn, and Markelle Kelly.
 
+The current librarians are Coen Adler and Saatvik Kher.
+
 Funding support from the National Science Foundation is gratefully acknowledged.
 
 This website is developed and maintained by [UCI Student Developers](/about/developers).
